game/style.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Press Start 2P', cursive;
}

.game-board{
  width: 100%;
  height: 500px;
  border-bottom: 15px solid rgb(0, 110, 24);
  margin: 0 auto;
  position: relative;
  overflow: hidden;
  background: linear-gradient(#87ceeb, #e0f6ff);
}

.pipe {
  position: absolute;
  bottom: 0;
  width: 80px;
  animation: pipe-animation var(--pipe-animation-duration, 2s) infinite linear;
}
.mario {
  width: 150px;
  position: absolute;
  bottom: 0;
}

.jump {
  animation: jump 500ms ease-out;
}

.clouds {
  position: absolute;
  width: 550px;
  animation: clouds-animation 30s infinite linear;
}

.game_over {
  color: #e41212;
  -webkit-text-stroke: 5px #000;
  text-align: center;
  position: absolute;
  left: 30%;
  top: 40%;
  font-size: 4rem;
}


@keyframes pipe-animation{
  from {
    right: -80px;
  }

  to {
    right: 100%;
  }
}

@keyframes jump {
  0% {
    bottom: 0;
  }
  40% {
    bottom: 180px;
  }
  50%{
    bottom: 180px;
  }
  60% {
    bottom: 180px;
  }
  100%{
    bottom: 0;
  }
}

@keyframes clouds-animation {
  from {
    right: -550px;
  } 
  to {
    right: 100%;
  }
}

.summary-screen {
  display: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  background-color: rgba(0, 0, 0, 0.8);
  color: #fff;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.summary-screen h1 {
  margin-bottom: 20px;
  font-size: 2rem;
}

#restart-btn {
  padding: 10px 20px;
  font-size: 1rem;
  border: none;
  border-radius: 5px;
  background-color: #e41212;
  color: white;
  cursor: pointer;
}

#restart-btn:hover {
  background-color: #ff6161;
}
.popup {
  display: none;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  background-color: rgba(0, 0, 0, 0.8);
  color: #fff;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  z-index: 10;
}

.popup p {
  margin-bottom: 20px;
  font-size: 1.5rem;
}

#next-btn {
  padding: 10px 20px;
  font-size: 1rem;
  border: none;
  border-radius: 5px;
  background-color: #28a745;
  color: white;
  cursor: pointer;
}

#next-btn:hover {
  background-color: #45c76b;
}

